# LuaEnv

./: .copilot-instructions.md  .gitattributes  .gitignore  COMMIT_MESSAGE.txt  ENVIRONMENT_MANAGEMENT.md  LICENSE  README.md  TODO.md  TODO.txt  build-dll-debug.bat  build-dll.bat  build-static-debug.bat  build-static.bat  build.py  build_cli.ps1  build_cli_aot.ps1  check-env.bat  clean.ps1  clean.py  config.py  download_lua_luarocks.py  install.py  install_lua_dll.py  luaconfig.c  luaenv-completion.ps1  luaenv-concept.fs  luaenv-design.md  luaenv-gui-concept.axaml  luaenv-project-structure.md  luaenv.ps1  output.txt  run_tests.py  setenv.ps1  setup-luarocks.bat  setup.ps1  setup.py  setup_build.py  setup_lua.py  test_luaenv.py  use-lua.ps1
backend/: .versions.json  .vspath.txt  README.md  __init__.py  build.py  build_config.txt  check-env.bat  clean.py  config.py  download_lua_luarocks.py  download_manager.py  global.psm1  luaenv-pkg-config.cmd  luaenv.ps1  luaenv_core.psm1  luaenv_ui.psm1  luaenv_vs.psm1  pkg_config.py  pkg_lookup.py  registry.py  run_tests.py  setenv.ps1  setup_build.py  setup_lua.py  use-lua.ps1  utils.py
backend/build_scripts/: build-dll-debug.bat  build-dll.bat  build-static-debug.bat  build-static.bat  install_lua_dll.py  setup-luarocks.bat
backend/tests/: TEST_COVERAGE.md  test_config_basic.py  test_config_cache.py
cli/: LuaEnv.sln  README.md
cli/.github/: copilot-instructions.md
cli/LuaEnv.CLI/: LuaEnv.CLI.fsproj  Program.fs  Program_Argu_Example.fs
cli/LuaEnv.Core/: LuaEnv.Core.fsproj  RegistryAccess.fs  Types.fs  Types.fs.backup
cli/LuaEnv.GUI/: App.axaml  App.axaml.fs  LuaEnv.GUI.fsproj  MainWindow.axaml  MainWindow.axaml.fs  Program.fs  app.manifest
examples/build_systems/: CMakeLists.txt  Makefile  Makefile_win  README.md  build.bat  build.ps1  build_all.ps1  main.c  meson.build  report.md
examples/lua_packages/: FENNEL_GUIDE.md  fennel_repl.lua  hello.fnl  install_test_packages.ps1  test_fennel.lua  test_fennel_file.lua  test_windows_extensions.lua
tests/: BUILD_SCRIPT_TEST_COVERAGE.md  README.md  run_all_tests.py  run_tests.py  test_config_basic.py  test_config_cache.py  test_config_cli.py  test_download.py  test_setup_build.py
tests/integration/: __init__.py  test_download_script.py
tests/unit/: test_download_manager.py
win-arm64/: LuaEnv.CLI.deps.json  LuaEnv.Core.xml
win-x86/: LuaEnv.CLI.deps.json
win64/: LuaEnv.CLI.deps.json  LuaEnv.Core.xml
